@@ -1,13 +1,7 @@
 AUX x11vnc-0.9.3-interix.patch 2305 RMD160 05545d508c2b558a4226a1b2a51e1efa4e065339 SHA1 acc313dc7f892cea78b932567ed57d0cd20b3ee0 SHA256 a5b7181129f1f807cee476c9496905ef7cb650ae11e98cabe0cfd3965ec11902
-DIST x11vnc-0.9.2.tar.gz 2068626 RMD160 c1931ec2fd1bda0ea78ddd93fa5aa155162247be SHA1 adc9f61e949c30890bf8617669bef6bfa6a37137 SHA256 6aa2b4c42add39098ef3e8ccbdf1e134f7b2a95f2fc80c2dea002151e0e71aac
-DIST x11vnc-0.9.3.tar.gz 2105034 RMD160 e4013e62af1e9e23c8566cf39cbee5af93bcc572 SHA1 7bb5e0d16d5fae301e6f4dcb5b9419a5e2396ee3 SHA256 0ab0690814d9b773ba790fde1728abea985f64e129b2cf42e12435d1f09adf69
-DIST x11vnc-0.9.4.tar.gz 2346158 RMD160 398c2e789d164cc69f209cbe35f0f4b1efc845b6 SHA1 142b6af81dee5825c993b25cfe1ed7aa7e515b0d SHA256 e3f8a224af7a8df4defc2c0b3567e1a697486443a2e073fa56122c4a4e439d65
-DIST x11vnc-0.9.5.tar.gz 2413415 RMD160 ba225af1b003c4c258a0fabad5d5c792e2149770 SHA1 236f7b3ba6a33422cf7593de7d7843c233143129 SHA256 cdfbe62245bee83ba3b81c6e66e9d370fa79e74757c17fc8d4811f68230630c1
 DIST x11vnc-0.9.6.tar.gz 2461744 RMD160 5587d325fc9a3d735e653fefa2e4425c9e737477 SHA1 2cc67604a8a4bb0c40738f3bdf7295dee9637eb3 SHA256 35cf292b9f46142ddfb5ec5ae169d2ec33f2e4fa68cc7f49a0d98cac55727e1a
-EBUILD x11vnc-0.9.2-r1.ebuild 1674 RMD160 2488151d4152c5fe78771bd2660023beee721b6e SHA1 de4eb0f80bdfd25410bb04d6ec20553328585a68 SHA256 bf67c975d892bc85d30f48aa81a5b7c05e18b58158c8bf46c9b1cbe7ee99d7a6
-EBUILD x11vnc-0.9.3.ebuild 1781 RMD160 0e3bc30ff1d4653e13bc16fb92cf34977de59bf8 SHA1 2240300cf34a972c229f0a8d3dcf0d45d22419ff SHA256 abf07d215d27948591f1eff9afd02e723c293900182978b49e5390ad04274fec
-EBUILD x11vnc-0.9.4.ebuild 1789 RMD160 b32852e4faf01a3f728ea6b3113992ed64b3d698 SHA1 16ccc6a8266db70e5d0acab5bc02da4cd9c50549 SHA256 c79c3f43d61a168b4ee26ce5d6f2479d3ddd0dbc5ff2909fadf6dd7b6f2c7901
-EBUILD x11vnc-0.9.5.ebuild 1791 RMD160 ff84c7cc9c6b6f8afab014132b331f0f85b5d5cb SHA1 f04fc5c6d5fa3e8bce14b15de7be865d48f802f0 SHA256 eeb13e387cc59872c5a11762de3b81512c019befcb563098121f2edcf905227c
-EBUILD x11vnc-0.9.6.ebuild 1789 RMD160 2f2da705bbe65402f13ec77136dfc53e136bd7d2 SHA1 16fe3f15759299d92ccffedd4c7351cfaf7c73ad SHA256 d29da0b663440a0baea0a4aed038c1e43cc591a36bd5b794a3bf808ed2099fde
-MISC ChangeLog 8663 RMD160 d544fdcc80ab9e193ac8bfc9ad826fe09c01065f SHA1 348d183c03dca0d4b2a2db18fb4ad6eaefc4b8ea SHA256 7be48ff78d31f0d937e3ef837d47a1e20248fd9f9a1ada52121874c494b9af45
+DIST x11vnc-0.9.7.tar.gz 2528334 RMD160 e9eec21ca31b5ec215898624057edc6bd275edcb SHA1 0ce3a0dd83694fddd64d262320ab7d2edb5310cc SHA256 fd21224ec09ca5294ba0627433e4d2cb726d389c7818d162f152374e6d693342
+EBUILD x11vnc-0.9.6.ebuild 2016 RMD160 35f75c326e2b61278b72d28bafef2db836ae3c3d SHA1 3365309355292d3c17e2abddda9bfb5d0b558764 SHA256 a4a83dd45240ccf956d669215bbf71991bed0827256b7df502768a08a4211f0a
+EBUILD x11vnc-0.9.7.ebuild 2001 RMD160 82f6118d6f419fadf9fd9e2c57ce455b2ec1aa66 SHA1 e803895a74fd30a3a4b6a2b794fccc5bb5020fb7 SHA256 6744ed5df3158d78d89f0886c70ee4355f62091fe7c1e8185cc02af6c6bd6676
+MISC ChangeLog 8945 RMD160 55516ac52a94a64fe79bee516e3740535f707339 SHA1 194e579ddcf0b7dcb41aa6e6dfd857dbe8b33877 SHA256 a899a9fa8a6ef9fe0cd165fb3e24d1fa6e38384ab48f5d8ad32059c47b7ed7b2
 MISC metadata.xml 599 RMD160 42954f89865c12c5fd4707bc784037f2231c6db6 SHA1 4ce649d4717b45387cdfd9b82984194deb8fcfad SHA256 ba34dcd7e24d8434345f6657e4c2d6b14b4e935590de308f23375e436c94556d
